--- a/sshguard/sshguard.conf
+++ b/sshguard/sshguard.conf
@@ -6,6 +6,10 @@ BACKEND="/usr/lib/x86_64-linux-gnu/sshg-fw-iptables"
 # Example 1: ssh and sendmail from systemd journal:
 LOGREADER="LANG=C /bin/journalctl -afb -p info -n1 -o cat SYSLOG_FACILITY=4 SYSLOG_FACILITY=10"
 
+
+# Space-separated list of log files to monitor. (optional, no default)
+FILES="/var/log/auth.log /var/log/authlog /var/log/maillog"
+
 #### OPTIONS ####
 # Block attackers when their cumulative attack score exceeds THRESHOLD.
 # Most attacks have a score of 10. (optional, default 30)
