--- a/sshguard/sshguard.conf
+++ b/sshguard/sshguard.conf
@@ -8,7 +8,7 @@ LOGREADER="LANG=C /bin/journalctl -afb -p info -n1 -o cat SYSLOG_FACILITY=4 SYSL
 
 
 # Space-separated list of log files to monitor. (optional, no default)
-FILES="/var/log/auth.log /var/log/authlog /var/log/maillog"
+FILES="/var/log/auth.log"
 
 #### OPTIONS ####
 # Block attackers when their cumulative attack score exceeds THRESHOLD.
