--- a/ntp.conf
+++ b/ntp.conf
@@ -18,10 +18,7 @@ filegen clockstats file clockstats type day enable
 # Use servers from the NTP Pool Project. Approved by Ubuntu Technical Board
 # on 2011-02-08 (LP: #104525). See http://www.pool.ntp.org/join.html for
 # more information.
-pool 0.ubuntu.pool.ntp.org iburst
-pool 1.ubuntu.pool.ntp.org iburst
-pool 2.ubuntu.pool.ntp.org iburst
-pool 3.ubuntu.pool.ntp.org iburst
+server be.pool.ntp.org
 
 # Use Ubuntu's ntp server as a fallback.
 pool ntp.ubuntu.com
@@ -41,6 +38,9 @@ restrict -6 default kod notrap nomodify nopeer noquery limited
 # Local users may interrogate the ntp server more closely.
 restrict 127.0.0.1
 restrict ::1
+
+restrict 193.191.177.6
+restrict 2a02:1800:100::41:1
 
 # Needed for adding pool entries
 restrict source notrap nomodify noquery
