updated ipv6 for mrt in ntp config

--- a/ntp.conf
+++ b/ntp.conf
@@ -40,7 +40,7 @@ restrict 127.0.0.1
 restrict ::1
 
 restrict 193.191.177.6
-restrict 2a02:1800:100::41:1
+restrict -6 2001:6a8:2880:a021:0:0:0:6
 
 # Needed for adding pool entries
 restrict source notrap nomodify noquery
