ntp ipv4 mrt with subnetmask config

--- a/ntp.conf
+++ b/ntp.conf
@@ -39,7 +39,7 @@ restrict -6 default kod notrap nomodify nopeer noquery limited
 restrict 127.0.0.1
 restrict ::1
 
-restrict 193.191.177.6
+restrict 193.191.177.6 mask 255.255.255.255 nomodify notrap
 restrict -6 2001:6a8:2880:a021:0:0:0:6
 
 # Needed for adding pool entries
