--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -43,6 +43,8 @@
 /etc/networkd-dispatcher/off.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/networkd-dispatcher/routable.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/b419cf0fd0dfba2935417e98424589e2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/f8973ce2f089340a805112414ab7cfd2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logrotate.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss/mech.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -110,6 +112,7 @@
 /etc/fonts/conf.avail IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/skel IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/cron.monthly IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/test IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/user IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
