--- a/ntp.conf
+++ b/ntp.conf
@@ -18,10 +18,8 @@ filegen clockstats file clockstats type day enable
 # Use servers from the NTP Pool Project. Approved by Ubuntu Technical Board
 # on 2011-02-08 (LP: #104525). See http://www.pool.ntp.org/join.html for
 # more information.
-server 0.be.pool.ntp.org
-server 1.be.pool.ntp.org
-server 2.be.pool.ntp.org
-server 3.be.pool.ntp.org
+pool be.pool.ntp.org 
+
 # Use Ubuntu's ntp server as a fallback.
 pool ntp.ubuntu.com
 
@@ -34,15 +32,15 @@ pool ntp.ubuntu.com
 # up blocking replies from your own upstream servers.
 
 # By default, exchange time with everybody, but don't allow configuration.
-restrict -4 default kod notrap nomodify nopeer noquery limited
-restrict -6 default kod notrap nomodify nopeer noquery limited
+restrict -4 default ignore kod notrap nomodify nopeer noquery limited
+restrict -6 default ignore kod notrap nomodify nopeer noquery limited
 
 # Local users may interrogate the ntp server more closely.
 restrict 127.0.0.1
 restrict ::1
 
 restrict 193.191.177.6 mask 255.255.255.255 nomodify notrap
-restrict -6 2001:6a8:2880:a021:0:0:0:6
+restrict -6 2001:6a8:2880:a021::6
 
 # Needed for adding pool entries
 restrict source notrap nomodify noquery
