add dns master zone

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -44,8 +44,8 @@
 /etc/networkd-dispatcher/routable.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/84377b531509ca391a48f6f06c03b194 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/9fecf79b8b522bff47abf8b7a8f78dea IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/4921dc2ce5bd36847b63fb58a6d7b1bf IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/8363021afb20876541785a9e356b280b IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/6cae663bedd2b5fdf7127fb3b71712eb IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/f0f84854f4838e0863bc666d3e95afda IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/cdf7ac9376ea5c0860a500d5635c3878 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -53,6 +53,7 @@
 /etc/gss IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss/mech.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/netplan IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/bind IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/scripts IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/alternatives IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/init.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
