--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -43,9 +43,9 @@
 /etc/networkd-dispatcher/off.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/networkd-dispatcher/routable.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/cde59767b5d2fa9863ff6f7021660e54 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/e308a4cade8ca0729a4a8f12a09c841b IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/8ee23cc7e049886bfa801971875b4ae5 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/4a14419a14880abf4668f14fc4436f5c IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/7a1bc8cddc387e8706bd72403d104d34 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/7fa63dd132ab3ac63b49026b2500851e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/4d8c4f3eb23b9be5f8468f399a7c2c59 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/5024e00c1e6222afe6a01863360ef939 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -54,6 +54,7 @@
 /etc/gss/mech.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/netplan IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/bind IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/bind/zones IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/scripts IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/alternatives IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/init.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
