fixed typo in www1.conf

--- a/apache2/sites-available/www1.conf
+++ b/apache2/sites-available/www1.conf
@@ -9,7 +9,7 @@
 	
 	<Directory "/var/www/www1/private">
 		AuthType Basic
-		AuthName "Password Required""
+		AuthName "Password Required"
 		AuthUserFile /etc/apache2/.htpasswd
 		Require	valid-user	
 	</Directory>
