installed libapache2-mod-php

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -72,6 +72,11 @@
 /etc/logcheck IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logcheck/ignore.d.server IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/opt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/7.4 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/7.4/mods-available IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/7.4/cli IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/7.4/cli/conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/terminfo IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc6.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rsyslog.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
