updated gitignore for incron.d

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -44,11 +44,11 @@
 /etc/networkd-dispatcher/routable.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/f946617a94f014d14b0ca0545e70efb0 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/2b67256b923c9a73f2d8731a979cdda9 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/44a38ca76143a0cb5eca893f66365d5c IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/0276741ecf4645ef4975648b477a633a IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/e1e681811334aebc58bc190a4b61796b IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/688eb91e8658edfe9d654817081cf7ac IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/1bcce89788cbb3028c1cfee62fa932c8 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/107fd65d0807c97bb0aab9da0739cb81 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/07919ef6a63c6fa82bdf5f332051ab20 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logrotate.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss/mech.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -77,6 +77,8 @@
 /etc/php/7.4/mods-available IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/php/7.4/cli IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/php/7.4/cli/conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/7.4/apache2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/7.4/apache2/conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/terminfo IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc6.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rsyslog.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
