--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -127,6 +127,7 @@
 /etc/cron.monthly IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/user IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/systemd/user/sockets.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/multi-user.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/network-online.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -134,9 +135,11 @@
 /etc/systemd/system/boot-complete.target.requires IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/network-pre.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/graphical.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/systemd/system/final.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/getty.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/socket.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/timers.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/systemd/system/cloud-final.service.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/default.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/sockets.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/network IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
