installed acme.sh & socat

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -48,7 +48,7 @@
 /etc/mrt/0bd353bd32a5e8febee5ca630d20f5e4 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/64fa962fb2fe95ad407db20a065e51cd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/b4ee9251fca08587183ea0295a54cd10 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/e58dbd5c818dd5af0f4091c2ac565fb2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/7efbe0b8751bbbb4184bc911894f6eb7 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logrotate.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss/mech.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -63,6 +63,11 @@
 /etc/ssh IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ssh/ssh_config.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ssh/sshd_config.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/renewal-hooks IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/renewal-hooks/deploy IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/renewal-hooks/pre IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/renewal-hooks/post IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/incron.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/newt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/xdg IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -125,6 +130,10 @@
 /etc/fonts/conf.avail IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/skel IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/cron.monthly IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/acme.sh IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/acme.sh/deploy IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/acme.sh/notify IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/acme.sh/dnsapi IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/user IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/user/sockets.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
