--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -26,12 +26,16 @@
 /etc/postfix/dynamicmaps.cf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/postfix/sasl IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc4.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/init IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc2.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/resolvconf IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/resolvconf/update-libc.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/perl IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/perl/Net IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/python3 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mysql IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mysql/conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mysql/mysql.conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/sshguard IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/sensors.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rcS.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -43,12 +47,12 @@
 /etc/networkd-dispatcher/off.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/networkd-dispatcher/routable.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/aa452aaff61e1615cf1c8411403d446f IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/64fa962fb2fe95ad407db20a065e51cd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/b4ee9251fca08587183ea0295a54cd10 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/7efbe0b8751bbbb4184bc911894f6eb7 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/18bd2d1b12adaf0efb789a1d0468b090 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/ecd0610fc03b326dbef53914bd9193e3 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/967e5eb4642063834de5253a22228026 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/df88294ffc000fe82d9b97ecd7c076cf IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/87f4112c6a2dd6655799e142b70cca83 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/ee5961d9dd6e9bdc3ad21da79ce24654 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/26636984fc0ebbe6598717983198f264 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/4d35d5afaa74d59e3d5b7f6a276ae166 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logrotate.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss/mech.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -75,6 +79,8 @@
 /etc/xdg/systemd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/console-setup IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logcheck IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/logcheck/ignore.d.paranoid IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/logcheck/ignore.d.workstation IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logcheck/ignore.d.server IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/opt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/php IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
