--- a/apache2/sites-available/mail.tom-ausloos.sb.uclllabs.conf
+++ b/apache2/sites-available/mail.tom-ausloos.sb.uclllabs.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>        
         ServerName mail.tom-ausloos.sb.uclllabs.com
 
-        DocumentRoot /var/www/mail/
+        DocumentRoot /var/www/html/
 </VirtualHost>
