--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -49,9 +49,9 @@
 /etc/mrt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/038cbb04092d3d3f01145a525faf3edc IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/adfc21518e80322932cd591a68512298 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/641c4d107711796ebccf9d6d48bc1c53 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/d6a882167cb755215bcd83e19b05d784 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/5e4a5b45ce2c361aefeb7b6718b204ac IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/a1fd34645e9d2633ae8240fd38b8c637 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/f1c470ef2a308902b6f19bdc6e490d97 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logrotate.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -68,10 +68,17 @@
 /etc/ssh/ssh_config.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ssh/sshd_config.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/csr IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/renewal-hooks IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/renewal-hooks/deploy IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/renewal-hooks/pre IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/renewal-hooks/post IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/renewal IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/accounts IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org/directory IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org/directory/9a0100c87e96954a8394b5a6b51dad1c IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/keys IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/incron.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/newt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/xdg IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
