--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -126,7 +126,9 @@
 /etc/udev/rules.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/udev/hwdb.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ssl IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/ssl/newcerts IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ssl/certs IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/ssl/CA IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ssl/private IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/python3.8 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/pm IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
