dovecot mail config

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -125,6 +125,9 @@
 /etc/udev IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/udev/rules.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/udev/hwdb.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/dovecot IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/dovecot/conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/dovecot/private IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ssl IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ssl/newcerts IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ssl/certs IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
