--- a/apache2/sites-available/secure.conf
+++ b/apache2/sites-available/secure.conf
@@ -1,8 +1,17 @@
 <VirtualHost *:80>
         ServerName secure.tom-ausloos.sb.uclllabs.be
+	Redirect permanent / https://secure.tom-ausloos.sb.uclllabs.be/
+	
+	
+</VirtualHost>
+
+<VirtualHost *:443>
+	ServerName secure.tom-ausloos.sb.uclllabs.be
 	DocumentRoot /var/www/secure
+	LogLevel info
 	
 	ErrorLog ${APACHE_LOG_DIR}/error.log
         CustomLog ${APACHE_LOG_DIR}/access.log combined
-	
+
+Include /etc/letsencrypt/options-ssl-apache.conf
 </VirtualHost>
