redirect for secure

--- a/apache2/sites-available/secure.conf
+++ b/apache2/sites-available/secure.conf
@@ -1,8 +1,14 @@
 <VirtualHost *:80>
         ServerName secure.tom-ausloos.sb.uclllabs.be
 	DocumentRoot /var/www/secure
+	ServerAlias www.secure.tom-ausloos.sb.uclllabs.be
+
 	ErrorLog ${APACHE_LOG_DIR}/error.log
         CustomLog ${APACHE_LOG_DIR}/access.log combined
-	
+
+RewriteEngine on
+RewriteCond %{SERVER_NAME} =secure.tom-ausloos.sb.uclllabs.be [OR]
+RewriteCond %{SERVER_NAME} =www.secure.tom-ausloos.sb.uclllabs.be
+RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]	
 	
 </VirtualHost>
