--- a/apache2/sites-available/secure-ssl.conf
+++ b/apache2/sites-available/secure-ssl.conf
@@ -1,5 +1,6 @@
 <IfModule mod_ssl.c>
-<VirtualHost *:443>
+<VirtualHost _default_:443>
+	SSLEngine On
         ServerName secure.tom-ausloos.sb.uclllabs.be
 	DocumentRoot /var/www/secure
 	ServerAlias www.secure.tom-ausloos.sb.uclllabs.be        
