--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -47,12 +47,12 @@
 /etc/networkd-dispatcher/off.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/networkd-dispatcher/routable.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/40917c692268717774400f606c470576 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/5bbbdd16971eebd808753fbdadf9fabc IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/32c0e1742581dabffdc178375e48143e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/51b4272a2be1c1599cdf8e97c156f507 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/a9c5f9ef283d1f44cd5a9afd906a8229 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/393f2a18f6cbeb349c79bf5d46b68e82 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/257e541faf9c8a26e91c6901d060ff74 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/adf4907f28cf84ba5f90bbc776e5320d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/a6ed4dc715effc72ade00e38e1fc2d97 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/f8a75a86e7548f66ee646e66931ab632 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/379d49e432aba91dc8fa49aaf40280b0 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/4f2252402570c504abcf72b0991031a3 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logrotate.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss/mech.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -73,8 +73,17 @@
 /etc/letsencrypt/renewal-hooks/deploy IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/renewal-hooks/pre IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/renewal-hooks/post IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/archive IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/archive/tom-ausloos.sb.uclllabs.be IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/archive/secure.tom-ausloos.sb.uclllabs.be IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/renewal IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/live IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/live/tom-ausloos.sb.uclllabs.be IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/live/secure.tom-ausloos.sb.uclllabs.be IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/accounts IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/accounts/acme-staging-v02.api.letsencrypt.org IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/accounts/acme-staging-v02.api.letsencrypt.org/directory IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/accounts/acme-staging-v02.api.letsencrypt.org/directory/bd42ee6e3dbb3cb976b2931919df8391 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org/directory IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org/directory/9a0100c87e96954a8394b5a6b51dad1c IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
