redirect for supersecure

--- a/apache2/sites-available/supersecure.conf
+++ b/apache2/sites-available/supersecure.conf
@@ -1,8 +1,13 @@
 <VirtualHost *:443> 
 	ServerName supersecure.tom-ausloos.sb.uclllabs.be 
+	ServerAlias www.supersecure.tom-ausloos.sb.uclllabs.be
 	DocumentRoot /var/www/supersecure
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
+RewriteEngine on
+RewriteCond %{SERVER_NAME} =www.supersecure.tom-ausloos.sb.uclllabs.be [OR]
+RewriteCond %{SERVER_NAME} =supersecure.tom-ausloos.sb.uclllabs.be
+RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
 </VirtualHost>
