supersecure config && supersecure ssl config

--- a/apache2/sites-available/supersecure-ssl.conf
+++ b/apache2/sites-available/supersecure-ssl.conf
@@ -1,5 +1,6 @@
 <IfModule mod_ssl.c>
 <VirtualHost _default_:443> 
+	SSLEngine On
 	ServerName supersecure.tom-ausloos.sb.uclllabs.be 
 	ServerAlias www.supersecure.tom-ausloos.sb.uclllabs.be
 	DocumentRoot /var/www/supersecure
