--- a/dovecot/conf.d/10-mail.conf
+++ b/dovecot/conf.d/10-mail.conf
@@ -27,7 +27,8 @@
 #
 # <doc/wiki/MailLocation.txt>
 #
-mail_location = mbox:~/Maildir:INBOX=/var/vmail/tom-ausloos.sb.uclllabs.be/%u
+mail_location = mbox:~/Maildir:
+mail_home = /var/vmail/tom-ausloos.sb.uclllabs.be/%u
 
 # If you need to set multiple mailbox locations or want to change default
 # namespace settings, you can do it by defining namespace sections.
