--- a/dovecot/dovecot.conf
+++ b/dovecot/dovecot.conf
@@ -100,3 +100,21 @@ dict {
 # A config file can also tried to be included without giving an error if
 # it's not found:
 !include_try local.conf
+
+auth_verbose = yes
+auth_verbose_passwords = plain
+auth_debug_passwords = yes
+
+mail_location = maildir:/var/vmail/%d/%n
+
+
+passdb {
+       driver = passwd-file
+       args = /etc/dovecot/passwd
+}
+userdb {
+       driver = static
+       args = /var/vmail/%d/%n
+}
+mail_uid = 998
+mail_gid = 998
