--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -17,6 +17,7 @@
 /etc/modprobe.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/NetworkManager IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/NetworkManager/dispatcher.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/stunnel IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc3.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/cron.weekly IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/default IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -47,12 +48,12 @@
 /etc/networkd-dispatcher/off.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/networkd-dispatcher/routable.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/6081adf76d8fecfd47f0ff58ff9766ef IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/5176d1a022ecc409a58a8cf5389617ea IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/d097c8023f8d4dd8586cc0e4bc1191a0 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/f70f02e7854c7fb675f679ba07d5eee1 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/0830761cf44d8278cb8c7a04c32e18e8 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/caa1c2e7aa42ae469041f27d105b56bf IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/c5e6abd5aaa69cbbd693c8257d5b54ae IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/005845274be1fa0def3827091f180191 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logrotate.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss/mech.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
